--- a/index.html
+++ b/index.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="di.fm iPad 3 : Since neither the di.fm website nor the di.fm iOS app is useable on iPad 3 I created this simple website" />
+	<head>
+		<meta charset='utf-8' />
+		<meta http-equiv="X-UA-Compatible" content="chrome=1" />
+		<meta name="description" content="di.fm iPad 3 : Since neither the di.fm website nor the di.fm iOS app is useable on iPad 3 I created this simple website" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 
-    <title>di.fm iPad 3</title>
-  </head>
+		<title>di.fm iPad 3</title>
+	</head>
 
-  <body>
+	<body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ooxi/di.fm-ipad3">View on GitHub</a>
+		<!-- HEADER -->
+		<div id="header_wrap" class="outer">
+				<header class="inner">
+					<a id="forkme_banner" href="https://github.com/ooxi/di.fm-ipad3/tree/gh-pages">View on GitHub</a>
 
-          <h1 id="project_title">di.fm iPad 3</h1>
-          <h2 id="project_tagline">Since neither the di.fm website nor the di.fm iOS app is useable on iPad 3 I created this simple website</h2>
+					<h1 id="project_title">di.fm iPad 3</h1>
+					<h2 id="project_tagline">Since neither the di.fm website nor the di.fm iOS app is useable on iPad 3 I created this simple website</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/ooxi/di.fm-ipad3/zipball/gh-pages">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/ooxi/di.fm-ipad3/tarball/gh-pages">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+						<section id="downloads">
+							<a class="zip_download_link" href="https://github.com/ooxi/di.fm-ipad3/zipball/gh-pages">Download this project as a .zip file</a>
+							<a class="tar_download_link" href="https://github.com/ooxi/di.fm-ipad3/tarball/gh-pages">Download this project as a tar.gz file</a>
+						</section>
+				</header>
+		</div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        Loading&hellip;
-      </section>
-    </div>
+		<!-- MAIN CONTENT -->
+		<div id="main_content_wrap" class="outer">
+			<section id="main_content">
+				Loading&hellip;
+			</section>
+		</div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">di.fm iPad 3 maintained by <a href="https://github.com/ooxi">ooxi</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+		<!-- FOOTER -->
+		<div id="footer_wrap" class="outer">
+			<footer class="inner">
+				<p class="copyright">di.fm iPad 3 maintained by <a href="https://github.com/ooxi">ooxi</a></p>
+				<p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+			</footer>
+		</div>
 
-    
-    <script type="text/javascript" src="javascripts/jquery-2.0.0.js"></script>
-    <script type="text/javascript" src="javascripts/jquery.xdomainajax.js"></script>
-    <script type="text/javascript" src="javascripts/main.js"></script>
-  </body>
+		
+		<script type="text/javascript" src="js/jquery-2.0.0.min.js"></script>
+		<script type="text/javascript" src="js/jquery.xdomainajax.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
+	</body>
 </html>
