--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 		<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
+		<link rel="apple-touch-icon" href="apple-touch-icon.png"/>
 
 		<title>di.fm iPad 3</title>
 	</head>
