--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<head>
 		<meta charset='utf-8' />
 		<meta http-equiv="X-UA-Compatible" content="chrome=1" />
-		<meta name="description" content="di.fm iPad 3 : Since neither the di.fm website nor the di.fm iOS app is useable on iPad 3 I created this simple website" />
+		<meta name="description" content="di.fm iPad 2 : Since neither the di.fm website nor the di.fm iOS app is useable on iPad 2 I created this simple website" />
 
 		<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 		<link rel="apple-touch-icon" href="apple-touch-icon.png"/>
 
-		<title>di.fm iPad 3</title>
+		<title>di.fm iPad 2</title>
 	</head>
 
 	<body>
@@ -20,8 +20,8 @@
 				<header class="inner">
 					<a id="forkme_banner" href="https://github.com/ooxi/di.fm-ipad3/tree/gh-pages">View on GitHub</a>
 
-					<h1 id="project_title">di.fm iPad 3</h1>
-					<h2 id="project_tagline">Since neither the di.fm website nor the di.fm iOS app is useable on iPad 3 I created this simple website</h2>
+					<h1 id="project_title">di.fm iPad 2</h1>
+					<h2 id="project_tagline">Since neither the di.fm website nor the di.fm iOS app is useable on iPad 2 I created this simple website</h2>
 
 						<section id="downloads">
 							<a class="zip_download_link" href="https://github.com/ooxi/di.fm-ipad3/zipball/gh-pages">Download this project as a .zip file</a>
@@ -40,7 +40,7 @@
 		<!-- FOOTER -->
 		<div id="footer_wrap" class="outer">
 			<footer class="inner">
-				<p class="copyright">di.fm iPad 3 maintained by <a href="https://github.com/ooxi">ooxi</a></p>
+				<p class="copyright">di.fm iPad 2 maintained by <a href="https://github.com/ooxi">ooxi</a></p>
 				<p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
 			</footer>
 		</div>
@@ -48,6 +48,7 @@
 		
 		<script type="text/javascript" src="js/jquery-2.0.0.min.js"></script>
 		<script type="text/javascript" src="js/jquery.xdomainajax.js"></script>
+		<script type="text/javascript" src="js/URI-1.11.2.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
